# sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
res/: log4cxx.properties
res/shader/: shader.frag  shader.vert
src/: camera.ixx  client.ixx  dialog.ixx  file.ixx  io.ixx  log.ixx  main.cpp  opengl.ixx  timer.ixx  tinyfd.ixx  window.ixx
src/gl/: buffer.ixx  descriptor.ixx  pipeline.ixx
